<resources>
    <string name="app_name">DaggerWithHilt</string>
    <string name="btn_persistent">Persistent Bottom Sheet</string>
    <string name="btn_modal">Modal Bottom Sheet</string>
    <string name="tv_title">Learn Bottom Sheet</string>
    <string name="tv_description">
        some task in Android. Types of BottomSheet \n\nA BottomSheet is of two types: \n\nPersistent BottomSheet \n\nModal BottomSheet</string>
    <string name="btn_one">Button 1</string>
    <string name="btn_two">Button 2</string>
    <string name="btn_three">Button 3</string>
    <string name="str_email">Email</string>
    <string name="str_password">Password</string>
    <string name="str_age">Age</string>
    <string name="str_submit">Submit</string>
    <string name="str_username">Username</string>
</resources>